5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1643_2445.log
== TEST (2019-04-10 19:14:37) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))

if  (qual == "F"):
     c = (5/9)*(temperatura - 32)
		print(c)
		
else:
	f = (9*temperatura + 120)/5
	 print(f)
-- ERROR:
File "XXXX", line 6
    print(c)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:14:49) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))

if  (qual == "F"):
     c = (5/9)*(temperatura - 32)
	print(c)
		
else:
	f = (9*temperatura + 120)/5
	 print(f)
-- ERROR:
File "XXXX", line 6
    print(c)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:15:01) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))

if  (qual == "F"):
     c = (5/9)*(temperatura - 32)
      print(c)
		
else:
	f = (9*temperatura + 120)/5
	 print(f)
-- ERROR:
File "XXXX", line 6
    print(c)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 09:08:22) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))

if  (qual == "F"):
     c = (5/9)*(temperatura - 32)
      print(C)
		
else:
	f = (9*temperatura + 120)/5
	 print(F)
-- EXECUTION TIME:
0.125304
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 6
    print(C)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:14:10) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))

if  (qual == "C"):
    f = (9*temperatura + 120)/5
      print(f)
		
else:
	 c = (5/9)*(temperatura - 32)
	   print(c)
		
-- ERROR:
File "XXXX", line 6
    print(f)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:14:25) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))

if  (qual == "C"):
     f = (9*temperatura + 120)/5
      print(f)
		
else:
	 c = (5/9)*(temperatura - 32)
	   print(c)
		
-- ERROR:
File "XXXX", line 6
    print(f)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:15:07) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))

if  (qual == "C"):
     f = (9*temperatura + 120)/5
		print(f)
     
		
else:
	 c = (5/9)*(temperatura - 32)
	   print(c)
		
-- ERROR:
File "XXXX", line 6
    print(f)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:15:49) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(f)
     
		
else:
   print(c)	
-- OUTPUT:
600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:16:14) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(f)
     
		
else:
   print(c)	
-- OUTPUT:
600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 09:16:26) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(f)
     
		
else:
   print(c)	
-- EXECUTION TIME:
0.196312
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
600.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
24.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 09:17:35) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(round(f, 2))
     
		
else:
   print(round(c, 2))	
-- EXECUTION TIME:
0.196115
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
600.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
24.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:17:45) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(round(f, 2))
     
		
else:
   print(round(c, 2))	
-- OUTPUT:
600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:19:41) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- OUTPUT:
600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 09:19:45) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- EXECUTION TIME:
0.167177
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
600.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
24.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:19:52) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- OUTPUT:
600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:23:20) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- OUTPUT:
600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:23:32) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- OUTPUT:
600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:23:49) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 120)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- OUTPUT:
600.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 09:24:53) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura - 120)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- EXECUTION TIME:
0.130444
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
552.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-24.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:24:57) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura - 120)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- OUTPUT:
552.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 09:25:30) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 180)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- EXECUTION TIME:
0.189884
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
612.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
36.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 09:25:35) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 180)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- OUTPUT:
612.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 09:25:50) 
-- CODE:
qual = input("digite a escala: ")
temperatura = float(input("DIGITE A TEMPERATURA: "))
c = (5/9)*(temperatura - 32)
f = (9*temperatura + 160)/5
if  (qual == "C"):
		print(round(f, 2))
		
		
if  (qual == "F"):
	  print(round(c, 2))
-- EXECUTION TIME:
0.146775
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
